--- a/Intel.MyDeals/Client/src/app/contract/ptModals/dealProductsModal/dealProductsModal.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/ptModals/dealProductsModal/dealProductsModal.component.css
@@ -48,7 +48,7 @@
     line-height: 1.5 !important;
     font-family: 'Intel Clear' !important;
     font-weight: 500 !important;
-    color: #111111 !important;
+    color: #ffffff !important;
     margin-top: 0px !important
 }
 /*.there-modal-header {
@@ -99,10 +99,12 @@ button.excelText.differ-artho-excel.iconsize.k-button-icontext.k-button.k-grid-e
 .deal-excel-style.modal-header {
     padding: 1rem 1rem !important;
     border-bottom: 1px solid #dee2e6 !important;
+    background-color: #003C71 !important;
 }
 .deal-excel-body-style.modal-body {
     position: relative !important;
     padding: 10px !important;
+    background-color: #003C71 !important;
 }
 
 
